--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,58 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- Primary Favicon -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Apple Touch Icon (iPhones & iPads) -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+
+    <!-- Viewport + Theme -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Base Site Description -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Knowall Paranormal — Stories, investigations, ghost encounters, TikTok clips, and supernatural content."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+
+    <!-- PWA / App Icons -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- ========================================================= -->
+    <!-- ===================== SEO META TAGS ====================== -->
+    <!-- ========================================================= -->
+
+    <!-- Primary SEO Tags -->
+    <meta name="title" content="Knowall Paranormal – Ghost Stories & Investigations" />
+    <meta name="keywords" content="paranormal, ghost stories, haunted places, supernatural, creepy videos, tiktok paranormal, unexplained encounters, ghost hunters, spooky content" />
+    <meta name="author" content="Knowall Paranormal" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://knowall.link/" />
+
+    <!-- OpenGraph (Facebook, TikTok, Instagram, Discord) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Knowall Paranormal – Ghost Stories & Spooky Encounters" />
+    <meta property="og:description" content="Creepy stories, haunted locations, paranormal investigations, and unexplained encounters by Knowall Paranormal." />
+    <meta property="og:url" content="https://knowall.link/" />
+    <meta property="og:image" content="https://knowall.link/preview.jpg" />
+
+    <!-- Twitter/X Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Knowall Paranormal – Supernatural Stories & Investigations" />
+    <meta name="twitter:description" content="Watch paranormal TikToks, ghost encounters, and supernatural breakdowns." />
+    <meta name="twitter:image" content="https://knowall.link/preview.jpg" />
+
+    <!-- Title -->
+    <title>Knowall Paranormal</title>
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need JavaScript enabled to run this website.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
